--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
+    "lucide-react": "^0.456.0",
     "mantine-react-table": "^2.0.0-beta.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
